fixed spacing issue in employee

--- a/react/src/components/Predictor.css
+++ b/react/src/components/Predictor.css
@@ -1,4 +1,4 @@
-.text-muted {
+.text-instructions {
     color: #7a7676;
     margin-top: 40px;
 }
